// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClipEditor with zoomed selection 1`] = `
<div
  className="clipEditor"
>
  <div
    className="clipEditor__actions clipEditor__actions--range"
  />
  <div
    className="clipEditor__actions clipEditor__actions--range"
  />
  <div
    className="clipEditor__actions clipEditor__actions--controls"
  >
    <div
      className="clipEditor__controls"
    >
      <button
        className="clipEditor__button clipEditor__button--zoom"
        onClick={[Function]}
      >
        Play Clip
      </button>
      <button
        className="clipEditor__button clipEditor__button--small"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-undo"
        />
         15s
      </button>
      <button
        className="clipEditor__button clipEditor__button--small"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-play"
        />
      </button>
      <button
        className="clipEditor__button clipEditor__button--small"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-repeat"
        />
         15s
      </button>
      <div
        className="dropdown dropdown--clipShare"
      >
        <span
          className="dropdown__toggle dropdown__toggle--clipShare"
          onClick={[Function]}
        >
          Share
        </span>
        <div
          className="dropdown__dropdown dropdown__dropdown--hidden"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ClipEditor with zoomed selection 2`] = `
<div
  className="clipEditor"
>
  <div
    className="clipEditor__actions clipEditor__actions--range"
  />
  <div
    className="clipEditor__actions clipEditor__actions--range"
  />
  <div
    className="clipEditor__actions clipEditor__actions--controls"
  >
    <div
      className="clipEditor__controls"
    >
      <button
        className="clipEditor__button clipEditor__button--zoom"
        onClick={[MockFunction]}
      >
        Zoom to Clip
      </button>
      <button
        className="clipEditor__button clipEditor__button--small"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-undo"
        />
         15s
      </button>
      <button
        className="clipEditor__button clipEditor__button--small"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-play"
        />
      </button>
      <button
        className="clipEditor__button clipEditor__button--small"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-repeat"
        />
         15s
      </button>
      <div
        className="dropdown dropdown--clipShare"
      >
        <span
          className="dropdown__toggle dropdown__toggle--clipShare"
          onClick={[Function]}
        >
          Share
        </span>
        <div
          className="dropdown__dropdown dropdown__dropdown--hidden"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Initial ClipEditor 1`] = `
<div
  className="clipEditor"
>
  <div
    className="clipEditor__actions clipEditor__actions--range"
  />
  <div
    className="clipEditor__actions clipEditor__actions--range"
  >
    <p
      className="clipEditor__text clipEditor__text--range"
    >
      Drag the range handles to create a clip
    </p>
  </div>
  <div
    className="clipEditor__actions clipEditor__actions--controls"
  >
    <div
      className="clipEditor__controls"
    >
      <div
        className="clipEditor__spacer"
      />
      <button
        className="clipEditor__button clipEditor__button--small"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-undo"
        />
         15s
      </button>
      <button
        className="clipEditor__button clipEditor__button--small"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-play"
        />
      </button>
      <button
        className="clipEditor__button clipEditor__button--small"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="fa fa-repeat"
        />
         15s
      </button>
    </div>
  </div>
</div>
`;
